<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_eight"
    card_view:cardCornerRadius="@dimen/margin_eight"
    card_view:cardElevation="@dimen/margin_four"
    tools:context="com.example.android.inventoryapp.CatalogActivity">

    <!-- Reference for ExpandableLayout: https://github.com/SilenceDut/ExpandableLayout -->
    <com.silencedut.expandablelayout.ExpandableLayout
        android:id="@+id/expandable_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_eight"
        app:expDuration="200"
        app:expExpandScrollTogether="true"
        app:expWithParentScroll="true">

        <RelativeLayout
            android:id="@+id/expand_layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/drop_down_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/drop_down_arrow_description" />

            <TextView
                android:id="@+id/name_text_view"
                style="@style/CatalogActivityItemText"
                android:textSize="@dimen/name_text_size"
                tools:text="Book name" />

            <TextView
                android:id="@+id/author_text_view"
                style="@style/CatalogActivityItemText"
                android:layout_below="@id/name_text_view"
                tools:text="Author" />

            <TextView
                android:id="@+id/dollar_sign_text_view"
                style="@style/CatalogActivityItemText"
                android:layout_below="@id/author_text_view"
                android:text="@string/dollar_sign"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_text_view"
                android:layout_toRightOf="@id/dollar_sign_text_view"
                android:layout_toEndOf="@id/dollar_sign_text_view"
                android:textStyle="bold"
                tools:text="Price" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_below="@id/price_text_view"
                style="@style/CatalogActivityItemText"
                tools:text="Quantity" />

            <TextView
                android:id="@+id/stock_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_text_view"
                android:layout_marginLeft="@dimen/margin_four"
                android:layout_marginStart="@dimen/margin_four"
                android:layout_toRightOf="@id/quantity_text_view"
                android:layout_toEndOf="@id/quantity_text_view"
                android:text="@string/stock_text_view" />

            <Button
                android:id="@+id/sale_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/sale_button"
                android:textColor="@android:color/holo_red_light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expanded_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/supplier_name_text_view"
                style="@style/CatalogItemExpandedText"
                android:layout_marginTop="@dimen/margin_eight"
                android:textSize="@dimen/name_text_size"
                tools:text="Supplier name" />

            <TextView
                android:id="@+id/supplier_phone_text_view"
                style="@style/CatalogItemExpandedText"
                android:layout_below="@id/supplier_name_text_view"
                tools:text="Supplier phone number" />

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?buttonBarButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/order_button"
                android:textColor="@android:color/holo_red_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/supplier_phone_text_view"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_button"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_button" />

                <Button
                    android:id="@+id/delete_button"
                    style="?buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>
        </RelativeLayout>
    </com.silencedut.expandablelayout.ExpandableLayout>
</android.support.v7.widget.CardView>